# django-debug-toolbar-user-switcher

./: .gitignore  COPYING  MANIFEST  README.rst  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: check.yml  publish.yml
debug_toolbar_user_panel/: panels.py  views.py
debug_toolbar_user_panel/templates/debug_toolbar_user_panel/: panel.html
debug_toolbar_user_switcher/: decorators.py  forms.py  panels.py  views.py
debug_toolbar_user_switcher/templates/debug_toolbar_user_panel/: panel.html
debug_toolbar_user_switcher/templates/debug_toolbar_user_switcher/: panel.html
tests/: settings.py  test_user_panel.py  urls.py
